fix/syntax highlighting dark mode issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -147,7 +147,7 @@ code[data-theme] span {
   background-color: var(--shiki-light-bg);
 }
 
-@media (prefers-color-scheme: dark) {
+html.dark {
   code[data-theme],
   code[data-theme] span {
     color: var(--shiki-dark);
